// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCompileRequest > createCompileRequest 1`] = `
{
  "targets": [],
}
`;

exports[`createCompileRequest > createCompileRequest 2`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "words",
      "sources": [
        "src/words.txt",
      ],
      "targetDirectory": ".",
    },
  ],
}
`;

exports[`createCompileRequest > createCompileRequest 3`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "words",
      "sources": [
        "src/words.txt",
      ],
      "targetDirectory": "out",
    },
    {
      "compress": false,
      "format": "plaintext",
      "name": "cities",
      "sources": [
        "src/cities.txt",
      ],
      "targetDirectory": "out",
    },
  ],
}
`;

exports[`createCompileRequest > createCompileRequest 4`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "combo",
      "sources": [
        "src/words.txt",
        "src/cities.txt",
      ],
      "targetDirectory": "out",
    },
  ],
}
`;

exports[`createCompileRequest > createCompileRequest 5`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "python-sources",
      "sources": [
        {
          "listFile": "python-sources.txt",
        },
      ],
      "targetDirectory": ".",
    },
  ],
}
`;

exports[`createCompileRequest > createCompileRequest 6`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "python-sources",
      "sources": [
        {
          "listFile": "python-sources.txt",
        },
      ],
      "targetDirectory": "python",
    },
  ],
}
`;

exports[`createCompileRequest > createCompileRequest 7`] = `
{
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "name": "python",
      "sources": [
        {
          "listFile": "python-sources.txt",
        },
      ],
      "targetDirectory": ".",
    },
  ],
}
`;
